# Mongo

mongodb_app/: pyproject.toml
mongodb_app/mongodb_app/: consumer.py  docker.py  main.py  models.py  producer.py  search.py  uploads.py
