[tool.poetry]
name = "mongodb-app"
version = "0.1.0"
description = ""
authors = ["Wargoth_ks <121107554+Wargoth-ks@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"
aiopath = "^0.6.11"
motor = "^3.3.1"
prompt-toolkit = "^3.0.39"
redis = "^5.0.1"
redis-lru = "^0.1.2"
rabbitmq = "^0.2.0"
pika = "^1.3.2"
faker = "^19.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
